# agnes

./: .env_example  .gitignore  Cargo.toml  README.md
.superpowers/sdd/: progress.md
crates/agnes-ast/: Cargo.toml  README.md
crates/agnes-ast/src/: lib.rs
crates/agnes-builtins/: Cargo.toml  README.md
crates/agnes-builtins/src/: aliases.rs  lib.rs  shows.rs  tools.rs  types.rs
crates/agnes-builtins/tests/: dispatch_routing.rs  finish_observe.rs  register.rs  shows.rs
crates/agnes-checker/: Cargo.toml  README.md
crates/agnes-checker/src/: env.rs  error.rs  lib.rs
crates/agnes-checker/tests/: check.rs
crates/agnes-checker/tests/snapshots/: check__flow_mismatch.snap
crates/agnes-cli/: Cargo.toml  README.md
crates/agnes-cli/src/: chat.rs  cli.rs  history_view.rs  input.rs  lib.rs  main.rs  plan_view.rs  run_cmd.rs  sink_stderr.rs
crates/agnes-cli/tests/: acceptance.rs  history_view.rs  input_balance.rs  max_turns_flag.rs  plan_view_snapshot.rs
crates/agnes-compiler/: Cargo.toml  README.md
crates/agnes-compiler/src/: cycle.rs  dag.rs  lib.rs  lower.rs
crates/agnes-compiler/tests/: compile.rs
crates/agnes-llm/: Cargo.toml
crates/agnes-llm/src/: anthropic.rs  dsl_extract.rs  error.rs  lib.rs  mock.rs  openai.rs  planner.rs  provider.rs  resolve.rs
crates/agnes-llm/tests/: anthropic_shape.rs  dsl_extract.rs  openai_shape.rs  planner.rs  planner_state.rs  provider_smoke.rs  resolve.rs
crates/agnes-parser/: Cargo.toml  README.md
crates/agnes-parser/src/: error.rs  expr.rs  lib.rs  toplevel.rs
crates/agnes-parser/tests/: parse.rs
crates/agnes-registry/: Cargo.toml  README.md
crates/agnes-registry/src/: lib.rs  loader.rs
crates/agnes-registry/tests/: register.rs  resolve_wrappers.rs  shows.rs
crates/agnes-runtime/: Cargo.toml  README.md
crates/agnes-runtime/src/: boundary.rs  error.rs  lib.rs  scheduler.rs
crates/agnes-runtime/tests/: execute.rs  tracer.rs
crates/agnes-session/: Cargo.toml
crates/agnes-session/src/: error.rs  events.rs  lib.rs  path_validation_tests.rs  plan_tree.rs  session.rs  tracer_bridge.rs
crates/agnes-session/tests/: cancel.rs  classify_root.rs  event_non_exhaustive.rs  session_end_to_end.rs  shell_run.rs
crates/agnes-types/: Cargo.toml  README.md
crates/agnes-types/src/: lib.rs
crates/agnes-types/tests/: show_fn.rs  unknown_wildcard.rs
docs/superpowers/plans/: 2026-07-18-agnes-dsl-mvp.md  2026-07-18-agnes-type-system-upgrade.md  2026-07-19-agnes-real-llm-integration.md  2026-07-20-agnes-agent-loop.md  2026-07-22-file-io-shell-execution.md  2026-07-22-positional-args-and-string-types.md  2026-07-23-sink-architecture-refactor.md  2026-07-24-fmap-tool-observe-branch-pruning.md
docs/superpowers/specs/: 2026-07-18-agnes-dsl-mvp-design.md  2026-07-18-agnes-type-system-upgrade-design.md  2026-07-19-agnes-real-llm-integration-design.md  2026-07-20-agnes-agent-loop-design.md  2026-07-22-file-io-shell-execution-design.md  2026-07-22-positional-args-and-string-types-design.md  2026-07-24-outcome-fmap-tool-observe-design.md
examples/: chat-demo.md  fan-out.agnes  full-demo.agnes  hello.agnes  translate.agnes  with-define.agnes
