[workspace]
resolver = "3"
members = [
    "crates/agnes-ast",
    "crates/agnes-types",
    "crates/agnes-parser",
    "crates/agnes-registry",
    "crates/agnes-checker",
    "crates/agnes-compiler",
    "crates/agnes-builtins",
    "crates/agnes-runtime",
    "crates/agnes-cli",
    "crates/agnes-llm",
    "crates/agnes-session",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["agnes contributors"]

[workspace.dependencies]
# internal
agnes-ast      = { path = "crates/agnes-ast" }
agnes-parser   = { path = "crates/agnes-parser" }
agnes-types    = { path = "crates/agnes-types" }
agnes-registry = { path = "crates/agnes-registry" }
agnes-checker  = { path = "crates/agnes-checker" }
agnes-compiler = { path = "crates/agnes-compiler" }
agnes-runtime  = { path = "crates/agnes-runtime" }
agnes-builtins = { path = "crates/agnes-builtins" }
agnes-llm      = { path = "crates/agnes-llm" }
agnes-session  = { path = "crates/agnes-session" }

# external
tokio       = { version = "1.40", features = ["rt-multi-thread", "macros", "fs", "sync"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
lexpr       = "0.2"
thiserror   = "2"
anyhow      = "1"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
insta       = { version = "1", features = ["yaml"] }
reqwest     = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
async-trait = "0.1"
dotenvy     = "0.15"
