[package]
name = "agnes-builtins"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
agnes-types.workspace = true
agnes-registry.workspace = true
agnes-llm.workspace = true
tokio = { workspace = true, features = ["process"] }
serde_json.workspace = true
anyhow.workspace = true

[dev-dependencies]
agnes-ast.workspace = true
