[package]
name = "agnes-cli"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "agnes_cli"
path = "src/lib.rs"

[[bin]]
name = "agnes"
path = "src/main.rs"

[dependencies]
agnes-parser.workspace = true
agnes-registry.workspace = true
agnes-checker.workspace = true
agnes-compiler.workspace = true
agnes-runtime.workspace = true
agnes-builtins.workspace = true
agnes-llm.workspace = true
agnes-session.workspace = true
async-trait.workspace = true
clap = { workspace = true }
dotenvy.workspace = true
rustyline = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "fs", "sync", "signal"] }
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
agnes-parser.workspace = true
agnes-registry.workspace = true
agnes-checker.workspace = true
agnes-compiler.workspace = true
agnes-runtime.workspace = true
agnes-builtins.workspace = true
agnes-llm.workspace = true
agnes-session.workspace = true
async-trait.workspace = true
