[package]
name = "agnes-llm"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
async-trait.workspace = true
reqwest.workspace     = true
serde.workspace       = true
serde_json.workspace  = true
thiserror.workspace   = true
tokio.workspace       = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
